--- a/sections/Analyse/PlatformChoice.tex
+++ b/sections/Analyse/PlatformChoice.tex
@@ -107,7 +107,7 @@ prototype, but the design limitations could be too limiting on the turrets
 mobility to be used in the final implementation. In addition, this approach will
 also require more effort on our side, to ensure proper compatibility between the
 platforms. The second option is to use the arduino platform with modules made
-for the NXT. This can be achieved by using a by using a special shield, that
+for the NXT. This can be achieved by using a special shield, that
 extends the arduino with ports that are compatible with the NXT modules. This
 would allow us to have the customizability of the arduino while still being able
 to use the proprietary sensors from the NXT. However the NXT shield is limited
