--- a/sections/Testing/UnitTest.tex
+++ b/sections/Testing/UnitTest.tex
@@ -1,16 +1,18 @@
 \section{Unit test}
 
-To test the software we decided to make unit tests, however since there is no
-framework for making this kind of test we had to make our own. The setup is
-quite simple and is build on the same principle as unit testing in fx. C\#.
-However, when testing an object oriented language, the testing is done on class
-level this gives a clear distinction between the different methods. This however
-is not the case in NXC. In our testing setup, only functions with a return
-value is tested and functions which uses input from the sensors are not
-tested. The basic principle is Arrange, Act and Assert. In the arrange step the
-input data is constucted as well as what the expected output is. In the act
-step, the functions are called and the inputs are saved. Then finaly in the
-assert step the outputs are verified arcording to the expected output. \nl
+To test the \name software we decided to make unit tests, however since have no
+knowledge of any integrated framework for unit testing in the NXT IDE, we
+have chosen to make our own. The setup is quite simple and is build on the same
+principle as unit testing in fx. C\#. When testing an object oriented
+language, the testing is done on class by class level as this gives a clear
+distinction between the different methods. This however is not the case in NXC,
+as the language follows the imperative programming paradigm. In our testing
+setup, only functions with a return value is tested and functions which uses
+input from the sensors are not tested. The basic principle is Arrange, Act and
+Assert. In the arrange step the input data is constucted as well as what the
+expected output is. In the act step, the functions are called and the inputs are
+saved. Then finaly in the assert step the outputs are verified arcording to the
+expected output. \nl
 
 \begin{minipage}[H]{\linewidth}
 \begin{lstlisting}[caption =Unit Test for Combine Vectors,label=combineVectorsTest] 
@@ -52,5 +54,7 @@ value on the screen of the NXT to have a way of representing the test results.
 \nl
 
 To conclude all the tests succeeded, one of the tests we had some issues as our
-calculations differed a little bit from the calculations made by the NXT. Theese
-differences was so small that we choose to call it a success. 
+calculations differed a little bit from the calculations made by the NXT. These
+differences was so small that they were likely caused by a rounding error. As
+the accuracy of the varibles in this part of the program is not deemed
+essential, we choose to call it a success.
