--- a/setup/chapters.tex
+++ b/setup/chapters.tex
@@ -27,6 +27,8 @@
 
 \part{Testing}
 \inputS{Testing/UnitTest}
+\part{Evaluation}
+\input{sections/Conclusion/InputConc.tex}
 %Physics of shooting
 %Turret design choises
 %	Different itterations of the turret
