--- a/sections/Implementation/NXCLang.tex
+++ b/sections/Implementation/NXCLang.tex
@@ -29,6 +29,6 @@ task search(){
 \end{lstlisting}
 \end{minipage}
 
-As excemplified in \autoref{NXCExample} the NXC language is reminicent of C, and
+As exemplified in \autoref{NXCExample} the NXC language is reminiscent of C, and
 the most notable differences come in the form of the inclusion of standard
 libraries, and specialized thread handling in the form of tasks.
