--- a/sections/Implementation/Implementation.tex
+++ b/sections/Implementation/Implementation.tex
@@ -6,6 +6,7 @@ by looking at the main system components and the three main program threads:
 tracking, distance measurement and fireing.
 
 \input{sections/Implementation/NXCLang.tex}
+\input{sections/Implementation/FPosCalc.tex}
 \input{sections/Implementation/SoftwareHierachy.tex}
 \input{sections/Implementation/Main.tex}
 \input{sections/Implementation/Tracking.tex}
