- Changed lots of stuff

--- a/sections/Design/TnTDesign/TurretDesign.tex
+++ b/sections/Design/TnTDesign/TurretDesign.tex
@@ -9,10 +9,11 @@ piston is mounted on an angling mechanism, which is positioned on top of
 the base. The NXT is mounted inside the base in order to distribute weight. Two
 ultrasonic sensors and a camera are positioned on the front of the base,
 allowing \name to track and measure the distance to a target. All of this sits
-on a turning mechanism. This mechanism consists cog connected to a motor which
-is placed onm the outside, allowing the base to turn.
- \fix{Add picture of the turret with arrows pointing to the various
-parts}{}
+on a turning mechanism. This mechanism consists of a cog connected to a motor
+which is placed on the outside, allowing the base to turn. The turret can be
+seen in \autoref{turret}. 
+
+\figx[0.16]{turret}{The final turret and its parts.}
 
 In the following subsections the design process and arguments for the
 design of each part will be presented.
@@ -30,9 +31,21 @@ considered:
   \item A piston design
 \end{itemize}
 
+\begin{figure}[H]
+\begin{minipage}{.31\textwidth}
+\figx[0.4]{ballista}{A sketch of the ballista design.} 
+\end{minipage}
+\begin{minipage}{.29\linewidth}
+\figx[0.4]{tennisball}{A sketch of the spinning wheel design.} 
+\end{minipage}
+\begin{minipage}{.29\linewidth}
+\figx[0.45]{piston}{A sketch of the piston design.}
+\end{minipage}
+\end{figure}
+
 The ballista design was considered as a ballista is able to deliver a lot of
-power with each shot.
-\figx[0.5]{ballista}{A sketch of the ballista design.} 
+power with each shot. Which can be seen in \autoref{ballista}.\nl
+
 This design was quickly dismissed, as while it can deliver a lot power to each
 shot, its rate of fire would be slow as it would be slow to reload. This would
 mean that in case it missed, it would most likely not be able to try again.\nl
@@ -40,9 +53,7 @@ mean that in case it missed, it would most likely not be able to try again.\nl
 The launcher was considered, since it is able to lauch projectiles quickly and
 with great force. It utilizes the same principle as a tennis ball launcher, two
 wheels placed side by side spinning in opposite directions, with the projectile
-pushed through.
-
-\figx[0.6]{tennisball}{A sketch of the spinning wheel design.} 
+pushed through. Which can be seen in \autoref{tennisball}.\nl
 
 When trying to build this design it was determined that the available motors was
 not powerful enough to deliver the necessary momentum for launching a
@@ -56,9 +67,8 @@ grip the projectile.\nl
 The piston design uses a piston that pushes the projectile trough a mouth piece
 that clamps around it. This means that until enough force has been applied to
 the projectile it is held in the mouth piece. When enough force has been
-applied by the piston, the projectile will be forced out at high speed.
-
-\figx[0.6]{piston}{A sketch of the piston design.}
+applied by the piston, the projectile will be forced out at high speed. Which
+can be seen in \autoref{piston}.\nl
 
 This design has several advantages, Lego Technic has a ball launcher which can
 store several small ball projectiles. This allows us to have an easily
