--- a/sections/PhysTheory/ProjectileMotion.tex
+++ b/sections/PhysTheory/ProjectileMotion.tex
@@ -34,8 +34,10 @@ By using this theorem, we can use the projectiles initial velocity, combined
 with the angle of firing, to determine how far the object will fly.\nl
 
 It should be noted that the formulas \autoref{slength} and \autoref{sheight} do
-not take the effect of air resistance on the projectile into account. The topic
-of air resistance and the relevance thereof is discussed in \autoref{AirResDisc}.
+not take the effect of air resistance on the projectile into account. 
+
+% The topic of air resistance and the relevance thereof is discussed in
+% \fix{\autoref{AirResDisc}}{Where is it?}.
 
 \subsection{Calculating Distance}\label{CalcDist}
 In order to calculate the distance at which the projectile will touch the ground
