--- a/sections/Testing/Testing.tex
+++ b/sections/Testing/Testing.tex
@@ -6,8 +6,8 @@ discuss to which degree these results are acceptable according the the product
 requiremtents.
 
 \section{Angle Test}
-As discussed in \autoref{} the turret has one main variable it can change in
-order to accurately hit the target, namely the angle of firing. Due to the
+As discussed in \fix{\autoref{}}{Jones} the turret has one main variable it can
+change in order to accurately hit the target, namely the angle of firing. Due to the
 importance of being able to precisely set the angle of firing, tests have been
 made to ensure that the turrets accuracy is within an acceptable margain of
 error.
@@ -19,7 +19,9 @@ consistant position to measure the angle from, a lego structure was added to the
 turrets base. As the turret is shifted in relation to the pivot point, a lego
 brick was added which connects to the pivot point and is parallel to the turret.
 This brick is used to measure the turrets angle. This setup can be seen in
-\figx[0.13]{AngleTestSetup.png}{Setup for testing the turrets angle.}.
+\autoref{AngleTestSetup}.
+
+\figx[0.13]{AngleTestSetup}{Setup for testing the turrets angle.}
 
 In order to test the turrets ability to set its angle correctly, two different
 tests were used to test the most likely scenarios. The first test has the turret
@@ -31,7 +33,7 @@ to be 5 degrees.
 \subsection{Results: Test 1}
 This test had the turret retract to its resting position before setting its
 angle of fire. Below will be presented the data from data set 2. The rest
-of the data can be found in \autoref{}.
+of the data can be found in \fix{\autoref{}}{JONES}.
 
 \begin{table}[H]
 \centering
@@ -56,7 +58,7 @@ Test Num:                     & 2      \\ \hline
 \subsection{Results: Test 2}
 This test had the turret set the angle as an offset based on the previously set
 angle. Below will be presented the data from data set 4.
-The rest of the data can be found in \autoref{}.
+The rest of the data can be found in \fix{\autoref{}}{DAMN}.
 
 \begin{table}[H]
 \centering
