--- a/bib/lib.bib
+++ b/bib/lib.bib
@@ -182,3 +182,13 @@
 	howpublished = {\url{http://bricxcc.sourceforge.net/nbc/nxcdoc/nxcapi/vars.html}}
 
 }
+
+@MISC{NXTG,
+
+	title = {NXTprograms},
+
+	note = {seen 06/12/2016},
+
+	howpublished = {\url{http://www.nxtprograms.com/help/software.html}}
+
+}
