--- a/sections/Analyse/PlatformChoice.tex
+++ b/sections/Analyse/PlatformChoice.tex
@@ -1,8 +1,8 @@
 \chapter{Platform Choice}\label{PlatformC}
 The purpose of this chapter will be to analyse the different hardware platforms available
 and ultimately select one for the project. The platforms to be examined are Lego
-NXT Mindstorms and Arduino, due to the fact that these platforms are offered by
-the university and that they are suited for an embedded system.
+NXT Mindstorms and Arduino. These are chosen due to the fact that these
+platforms are offered by the university and that they are suited for an embedded system.
 First the platforms will be described briefly, then they will be
 compared based on a set of criteria. In conclusion a platform for the project
 will be chosen.
@@ -52,31 +52,27 @@ of:
 \end{itemize}
 
 The Lego NXT comes with the NXT-G programming environment which is a visual
-programming language for use with the NXT platform \Source. There exist a
+programming language for use with the NXT platform \cite{NXTG}. There exist a
 variety of unofficial programming languages for the NXT, such as leJOS(Java) and
 RobotC(C) which makes it possible to write programs using the more popular programming
-languages \citep{NXTProgrammingLanguage}.
-
-\begin{itemize}
-  \item The external peripherals come programmed and assembled - all the user
-  has to do is handle the data received by the NXT brick.
-  \item The NXT can be combined with Lego Technics to use as a building
-  platform. This makes construction simple, as it is not necessesary to
-  manifacture your own mechanical parts.
-\end{itemize}
-\fix{}{what is this doing here?}
+languages \citep{NXTProgrammingLanguage}.\nl
+When using the LEGO NXT platform, one can make use of a multitude of 1st or 3rd
+party peripherals. These specialized peripherals come programmed and assembled -
+all the user has to do is handle the data received by the NXT brick.
+Another feature of the platform is that the NXT can be directly combined with
+Lego Technics, or just lego in general, to use as a building platform. This
+makes construction simple, as it is not necessesary to manifacture your own
+mechanical parts.
 
 \section{Arduino}
-\fix{The Arduino was born as a tool for fast prototyping, aimed at people
-lacking a background in electronics and programming. Over the years the arduino has
-evolved from offering simple 8-bit boards to offering a variety of different
-boards suiting different needs such as memory available, processing power,
-number of ports on the platform, etc.}{A bit to much copy paste} The arduino
-comes with its own programming language and IDE \citep{ArduinoIntro}. \fix{A
-large number of modules are available for the arduino provided by Arduino themselves and 3rd party vendors, allowing for
-construction of diverse and complex systems \citep{ArduinoComponents}.}{Bad
-source, needs better source and bettet text} For the sake of comparison we will
-use the Arduino Uno, since this is the board being offered by the university.\nl
+The Arduino platform is developed as a tool for fast and effecient prototyping.
+By design, the platform is designed to be used effeciently by people without
+much knowledge about programming and electronics. The Arduino lineup consists of
+a number of different boards, each with their own hardware specifications. As
+such, a model with sufficient memory, processing power and I/O ports.
+The arduino comes with its own programming language and IDE
+\citep{ArduinoIntro}. For the sake of comparison we will use the Arduino Uno,
+since this is the board being offered by the university.\nl
 
 The Arduino Uno has the following technical specifications\citep{UNOSpecs}:
 
@@ -84,15 +80,13 @@ The Arduino Uno has the following technical specifications\citep{UNOSpecs}:
   \item ATmega328P processor 16 MHz clockfrequency
   \item 32 KB Flash storage
   \item 2 KB SRAM
-  \fix{\item A large variety of 3rd party peripherals are available for the
-  platform \citep{ArduinoComponents}.}{Not a spec}
-  \fix{\item Due to the popularity of the platform, there is a large community
-  surrounding it, providing a large amount of libraries to use with the
-  modules.}{Not a spec}
-  \fix{\item If the library doesn't exist or contain the necesary functionality,
-  it will have to be written, thus time will have to be invested in order to make
-  it work.}{Not a spec}
 \end{itemize}
+
+It should also be noted that as the Arduino platform is not limited to work with
+specific hardware, it has access to a large variety of 3rd party peripherals
+\citep{ArduinoComponents}. In addition, due to the popularity of the platform,
+there appears to be a large dedicated community, which provides a large amount
+of libraries to use with the modules.
 
 \section{Combination of platforms}\label{CombPlat}
 Instead of using only a single platform, it is possible to combine them. There
@@ -134,8 +128,8 @@ the two platforms.
   entirety of the Lego Technics system, which makes it easy to construct a
   technical platform. Using the Arduino platform could be difficult, as it could
   require us to manually manufacture the individual parts of the turret, e.g.
-  designing a \fix{fulcrum}{a what?} for the cannon or constructing a fireing
-  mechanism.
+  designing a functional shaft for the cannon to rotate about or constructing a
+  fireing mechanism.
   While it is possible to integrate an Arduino into the LEGO platform, we find
   that it is considerably easier to use the NXT platform, as it is specifically
   designed for that purpose. The NXT also has the advantage that the various
