- Added more stuff to do with the PC chapter

--- a/bib/lib.bib
+++ b/bib/lib.bib
@@ -81,7 +81,7 @@
 
   note = {Seen 01/11/2016},
 
-  howpublished = {\url{https://www.arduino.cc/en/Main/ArduinoBoardUno}}
+  howpublished = {\url{https://www.arduino.cc/en/Main/ArduinoBoardUno#techspecs}}
 
 }
 
@@ -185,10 +185,10 @@
 
 @MISC{NXTG,
 
-	title = {NXTprograms},
+	title = {NXT softwaredownload},
 
 	note = {seen 06/12/2016},
 
-	howpublished = {\url{http://www.nxtprograms.com/help/software.html}}
+	howpublished = {\url{https://www.lego.com/da-dk/mindstorms/downloads/nxt-software-download}}
 
 }
